automation/gitops/network-policies/team-b-deny-all-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-policy
  namespace: vcluster-vcteam-b
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector: {}
